--- a/frontend/src/styles/pages/room-list.scss
+++ b/frontend/src/styles/pages/room-list.scss
@@ -6,6 +6,10 @@
   margin: 1rem 0;
 }
 
+.room-list-select {
+  padding: 0.5rem;
+}
+
 .room-card {
   background-color: #ddd;
   padding-bottom: 1rem;
