--- a/frontend/src/styles/pages/room-list.scss
+++ b/frontend/src/styles/pages/room-list.scss
@@ -6,8 +6,15 @@
   margin: 1rem 0;
 }
 
-.room-list-select {
-  padding: 0.5rem;
+.room-list-selects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 1rem;
+  margin: 2rem 0;
+
+  .room-list-select {
+    padding: 0.5rem;
+  }
 }
 
 .room-card {
