--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -81,3 +81,11 @@ body {
     font-size: 0.9rem;
   }
 }
+
+.host {
+  display: grid;
+  grid-template-columns: 30% 1fr;
+  column-gap: 1rem;
+  margin: 3rem 0;
+  line-height: 1.5;
+}
