--- a/frontend/src/styles/layout/navigation.scss
+++ b/frontend/src/styles/layout/navigation.scss
@@ -33,4 +33,18 @@
       background-color: $primary-color;
     }
   }
+
+  &-search {
+    &-form {
+      margin-right: 3rem;
+    }
+
+    &-input {
+      padding: 0.3rem 0.5rem;
+    }
+
+    &-button {
+      padding: 0.4rem 0.5rem;
+    }
+  }
 }
