--- a/frontend/src/styles/utilities/mixins.scss
+++ b/frontend/src/styles/utilities/mixins.scss
@@ -3,10 +3,10 @@
   cursor: pointer;
   border: none;
   outline: none;
+  transition: $main-transition;
 
   &:hover {
     background: darken($bgColor, 8%);
-    transition: all 0.3s ease;
   }
 
   &:active {
@@ -14,18 +14,16 @@
   }
 }
 
-@mixin button-variant($color, $hoverColor: $primary-color) {
+@mixin button-variant($color) {
   background-color: $color;
   color: white;
-  font-size: 0.9rem;
   outline: none;
+  border: none;
   cursor: pointer;
+  transition: $main-transition;
 
   &:hover {
-    background-color: transparent;
-    border: 1px solid $color;
-    color: $color;
-    transition: $main-transition;
+    background-color: darken($color, 10%);
   }
 
   &--bordered {
@@ -35,11 +33,11 @@
     font-size: 0.9rem;
     outline: none;
     cursor: pointer;
+    transition: $main-transition;
 
     &:hover {
       background-color: $color;
       color: white;
-      transition: $main-transition;
     }
 
     &-animated {
@@ -50,10 +48,10 @@
       outline: none;
       cursor: pointer;
       position: relative;
+      transition: $main-transition;
 
       &::before {
         content: "";
-        transition: $main-transition;
         width: 0;
         height: 100%;
         background-color: $primary-color;
@@ -114,5 +112,7 @@
     content: "X";
     position: absolute;
     right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
